--- a/nibbles-template/src/Components/Navbar.css
+++ b/nibbles-template/src/Components/Navbar.css
@@ -1,20 +1,61 @@
+/* Default Navbar style for all pages */
 .navbar {
-    padding: 20px;
-    display: flex;
-    align-items: center;
-    border-bottom: 1px solid #f2f2f2;
-  }
-  .navbar h1 {
-    color: #009116;
-  }
-  .navbar .links {
-    margin-left: auto;
-  }
-  .navbar a {
-    margin-left: 16px;
-    text-decoration: none;
-    padding: 6px;
-  }
-  .navbar a:hover {
-    color: #00843c;
-  }
+  padding: 40px;
+  display: flex;
+  align-items: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 100;
+  box-sizing: border-box;
+  background-color: rgb(6, 87, 22);
+}
+
+/* Navbar style for the homepage */
+.navbar-home {
+  border-bottom: none;
+  color: white;
+  position: absolute; /* Change this to absolute */
+  top: 0;
+  width: 100%;
+  z-index: 10; /* Ensure it's above the background image */
+}
+
+/* Navbar style for all other pages */
+.navbar-regular {
+  color: white;
+  border-bottom: 1px solid #f2f2f2;
+}
+
+/* Ensure the content on non-home pages starts below the navbar */
+.page-container {
+  padding-top: 100px; /* Add a large enough space to push content down */
+  box-sizing: border-box;
+}
+
+/* Title styling */
+.navbar h1 {
+  margin: 0;
+}
+
+/* Links container */
+.navbar .links {
+  margin-left: auto;
+  display: flex;
+  gap: 20px;
+}
+
+/* Link styling */
+.navbar a {
+  color: white;
+  text-decoration: none;
+}
+
+/* Home page link styling */
+.navbar-home a {
+  color: white;
+}
+
+.navbar a:hover {
+  color: lightgray;
+}
