--- a/nibbles-template/src/Components/Navbar.css
+++ b/nibbles-template/src/Components/Navbar.css
@@ -8,14 +8,14 @@
   width: 100%;
   z-index: 100;
   box-sizing: border-box;
-  background-color: rgb(6, 87, 22);
+  background: linear-gradient(to bottom right, #033a0e, #89d73a); /* Gradient from dark green to bamboo green */
 }
 
 /* Navbar style for the homepage */
 .navbar-home {
   border-bottom: none;
   color: white;
-  position: absolute; /* Change this to absolute */
+  position: absolute;
   top: 0;
   width: 100%;
   z-index: 10; /* Ensure it's above the background image */
